[package]
name = "syntax-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
tree-sitter = "0.25"
tree-sitter-language = "0.1"
ropey = "1.6"
rustc-hash = "2.1"
tree-sitter-rust = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-json = "0.24"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-bash = "0.25"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parse_baselines"
harness = false

[profile.release]
# Canonical release profile per dpp §1.1 Task 0.4 (Wave 2.4).
# SAFETY: syntax-core MUST use panic = "unwind" because
# src/ffi.rs wraps every C entry point in std::panic::catch_unwind
# via the `syntax_catch!` macro so tree-sitter panics surface as a
# Swift-safe sentinel instead of aborting the process.
panic = "unwind"
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
debug = false
overflow-checks = false

[profile.release.package."*"]
opt-level = 3

[profile.release.build-override]
opt-level = 0
