[package]
name = "helios-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "UniFFI bridge: Rust core exposed to Swift UI layer"

[dependencies]
agent_core = { workspace = true }
helios-core = { workspace = true }
helios-mlx = { workspace = true }
helios-runtime = { workspace = true }
uniffi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
