[package]
name = "helios-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Model implementations: Qwen3-8B transformer, Mamba-2 SSM, BitNet ternary, TTT"

[dependencies]
helios-core = { workspace = true }
helios-mlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
fastrand = { workspace = true }
