[package]
name = "helios-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Agent runtime: orchestration, Resonance Gate, SCOPE-Rex, self-tuning, tool ladders"

[dependencies]
helios-core = { workspace = true }
helios-mlx = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
hmac = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = "0.4"
